# fraud-decision-tree-mlops

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  model-validation.yml
configs/: api_config.yaml  logging_config.yaml  train_config.yaml
docs/: api_contract.md  architecture.md  data_sheet.md  deployment.md  drift_detection.md  incident_response.md  index.md  limitations.md  ml_lifecycle.md  model_card.md  model_governance.md  monitoring.md  responsible_ai.md  runbook.md  security.md  telemetry.md  threat_model.md
docs/diagrams/: README.md  fraud-mlops-architecture.drawio
docs/releases/: v0.3.0.md
scripts/: demo_predict.py  e2e_smoke_test.py  run_api.py  run_training.py  telemetry_smoke_check.py  validate_model.py
scripts/docs/: generate_architecture_svg.py  generate_underground_graph_svg.py
src/fraud_detection/: _version.py  config.py
src/fraud_detection/api/: dependencies.py  main.py  routes.py  schemas.py
src/fraud_detection/data/: cleaning.py  schemas.py  (+7 more)
tests/contract/: test_api_contract.py
tests/integration/: test_api.py  test_demo_scripts.py  test_mlflow_tracking.py
tests/unit/: test_artifact.py  test_config.py  test_data_cleaning.py  test_data_contract.py  test_data_pipeline.py  test_data_splitting.py  test_drift.py  test_feature_engineering.py  test_model_training.py  test_prediction.py  test_preprocessing.py  test_telemetry.py  test_transaction_data_repository.py
(+10 files in other folders)
