[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-decision-tree-mlops"
version = "0.1.0"
description = "Decision Tree fraud detection system with MLflow tracking, MongoDB telemetry, FastAPI inference, CI/CD, and continuous ML lifecycle."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gabriel Duarte" }
]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.14.0",
    "pymongo>=4.8.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "joblib>=1.4.2",
    "matplotlib>=3.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
